@@ -1,3 +1,13 @@
+2008-02-11  Daiki Ueno  <ueno@unixuser.org>
+
+	* epa.el (epa-menu-mode): Merge into epa-mode.
+	(epa-menu-items): Rename the label "EasyPG Assistant" to
+	"Encryption/Decryption".
+
+	* epa-dired.el: Define a new minor-mode epa-dired-mode for dired.
+	(epa-dired-mode-map): Renamed from epa-dired-map.
+	(epa-global-dired-mode): Renamed the global minor mode.
+
 2008-02-11 Drew Adams  <drew.adams@oracle.com>
 
 	* isearch.el (isearch-fail): New face.
